# orquestra-sdk

./: .dockerignore  .docstr.yaml  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  cuda.Dockerfile  log_monitor.py  other_file.py  prototype.py  pyproject.toml  pytest.ini  scratch.py  setup.cfg  workflow_defs.py
projects/orquestra-sdk/: CHANGELOG.md  Makefile  pyproject.toml
projects/orquestra-sdk/docker/: .dockerignore  Dockerfile  cuda.Dockerfile
projects/orquestra-sdk/docs/: conf.py  index.rst
projects/orquestra-sdk/docs/examples/: quickstart.py  workflow_defs.py
projects/orquestra-sdk/docs/examples/tests/: conftest.py  parsers.py  test_dependency_installation.py  test_jupyter_sdk.py  test_local_ray.py  test_migrating_from_quantum_engine.py  test_mlflow_utilities.py  test_parametrized_workflows.py  test_remote.py  test_secrets.py
projects/orquestra-sdk/docs/guides/: dependency-installation.rst  index.rst  mlflow.rst  runtime-configuration.rst
projects/orquestra-sdk/docs/quickref/: index.rst
projects/orquestra-sdk/docs/tutorials/: cli-beginners-guide.rst  index.rst  installing-macos-linux.rst  installing-windows.rst  jupyter-sdk.rst  parametrized-workflows.rst  quickstart.rst  ray.rst  remote.rst  secrets.rst
projects/orquestra-sdk/src/orquestra/sdk/: __init__.py  exceptions.py
projects/orquestra-sdk/src/orquestra/sdk/_client/: __init__.py
projects/orquestra-sdk/src/orquestra/sdk/_ray/: _build_workflow.py
projects/orquestra-sdk/src/orquestra/sdk/_shared/: __init__.py
projects/orquestra-sdk/src/orquestra/sdk/dremio/: __init__.py
projects/orquestra-sdk/src/orquestra/sdk/examples/: workflow_defs.py
projects/orquestra-sdk/src/orquestra/sdk/kubernetes/: quantity.py
projects/orquestra-sdk/src/orquestra/sdk/packaging/: __init__.py
projects/orquestra-sdk/src/orquestra/sdk/schema/: configs.py  ir.py  responses.py  workflow_run.py
projects/orquestra-sdk/src/orquestra/sdk/secrets/: __init__.py
projects/orquestra-sdk/tests/: __init__.py  conftest.py
projects/orquestra-sdk/tests/cli/: test_arg_resolvers.py  test_dumpers.py  test_entrypoint.py  test_login.py  test_login_list.py  test_login_server.py  test_repos.py
projects/orquestra-sdk/tests/cli/data/: simulate_cli_logging_stuff.py
projects/orquestra-sdk/tests/cli/services/: test_down.py  test_up.py
projects/orquestra-sdk/tests/cli/ui/: exception_makers.py  test_errors.py  test_presenters.py  test_prompts.py
projects/orquestra-sdk/tests/cli/workflow/: test_graph.py  test_list.py  test_logs.py  test_stop.py  test_submit.py
projects/orquestra-sdk/tests/integration/: project_state.py  test_config.py  test_consistent_return_shapes.py  test_factory.py  test_services.py  test_services_integration.py
projects/orquestra-sdk/tests/integration/api/: __init__.py  test_api_with_ray.py
projects/orquestra-sdk/tests/integration/performance/: __init__.py  conftest.py  test_cli_perf.py
projects/orquestra-sdk/tests/integration/ray/: conftest.py  test_integration.py
projects/orquestra-sdk/tests/integration/ray/regression/: test_workflow_outputs.py
projects/orquestra-sdk/tests/runtime/: project_state.py  test_config.py  test_services_integration.py
projects/orquestra-sdk/tests/runtime/api/: test_api_with_ray.py
projects/orquestra-sdk/tests/runtime/performance/: test_cli_perf.py
projects/orquestra-sdk/tests/runtime/ray/: conftest.py  test_build_workflow.py  test_client.py  test_dag.py  test_id_gen.py  test_integration.py  test_logger.py
projects/orquestra-sdk/tests/runtime/ray/ray_logs/: test_ray_logs.py
projects/orquestra-sdk/tests/runtime/ray/regression/: test_workflow_outputs.py
projects/orquestra-sdk/tests/sdk/: conftest.py  project_state.py  sample_wfs.py  test_artifact_future_methods.py  test_config.py  test_consistent_return_shapes.py  test_constant_nodes_serialization.py  test_dates.py  test_dispatch.py  test_dispatch_integration.py  test_dsl.py  test_exceptions.py  test_factory.py  test_git_url_utils.py  test_graphs.py  test_in_process_runtime.py  test_jwt.py  test_module_serde.py  test_packaging.py  test_regex.py  test_serde.py  test_spaces.py  test_traversal.py  test_workflow.py  test_workflow_ast_parsing.py
projects/orquestra-sdk/tests/sdk/api/: test_config.py  test_task_run.py  test_wf_run.py
projects/orquestra-sdk/tests/sdk/configs/: test_config.py  test_config_api.py
projects/orquestra-sdk/tests/sdk/data/: configs.py
projects/orquestra-sdk/tests/sdk/data/sample_project/: helpers.py  workflow_defs.py  workflow_defs_no_raise.py
projects/orquestra-sdk/tests/sdk/dremio/: test_env_reader.py
projects/orquestra-sdk/tests/sdk/driver/: conftest.py  resp_mocks.py  test_ce_runtime.py  test_client.py
projects/orquestra-sdk/tests/sdk/logs/: test_interfaces.py  test_markers.py  test_models.py  test_regrouping.py
projects/orquestra-sdk/tests/sdk/mlflow/: test_connection_utils.py
projects/orquestra-sdk/tests/sdk/schema/: __init__.py  test_compat.py  test_generating_schema.py  test_ir.py  test_workflow_run_model.py
projects/orquestra-sdk/tests/sdk/secrets/: test_api.py  test_auth.py  test_client.py
projects/orquestra-sdk/tests/sdk/typing/: full_example.py
projects/orquestra-workflow-runtime/: CHANGELOG.md  Makefile  README.md  pyproject.toml
projects/orquestra-workflow-runtime/src/orquestra/workflow_runtime/: __init__.py
projects/orquestra-workflow-runtime/tests/: __init__.py  test_build_workflow.py  test_client.py  test_dag.py  test_fake.py  test_integration.py  test_logger.py
projects/orquestra-workflow-runtime/tests/data/: .gitignore  100_tasks_with_imps.json  cause_env_setup_error.json  exception_wf_with_multiple_values.json  generate_workflow_defs.py  greet_wf.json  infinite_workflow.json  multioutput.json  multioutput_task_failed_wf.json  multioutput_task_wf.json  serial_wf_with_slow_middle_task.json  simple_wf.json  wf_with_exec_ctx.json  wildcard.json
projects/orquestra-workflow-runtime/tests/logs/: test_markers.py  test_ray_logs.py
projects/orquestra-workflow-runtime/tests/logs/ray_logs/: test_ray_logs.py
(+1005 files in other folders)
