[build-system]
requires = [
    # The pin is a workaround for editable installs breaking IDEs.
    # See this mypy issue: https://github.com/python/mypy/issues/13392#issuecomment-1213527559
    # and our note: https://zapatacomputing.atlassian.net/wiki/spaces/ORQSRUN/pages/519012482/Editable+installs
    "setuptools<=63",
    "wheel",
    "setuptools_scm>=6.0",
]

# Including this section is same as 'use_scm_version=True' in setup.py
# See https://github.com/pypa/setuptools_scm for guidance
[tool.setuptools_scm]

[tool.isort]
profile = "black"

[tool.mypy]
# Without this we would have to add an empty __init__.py file for every package.
namespace_packages = true
# Without this mypy complains about the same module being imported under different
# names. Note that this also requires setting `mypy_path`.
explicit_package_bases = true
# We usually keep our source code under `src/<namespace>/<library>/...` or
# `src/python/<namespace>/<library>...`. This option tells mypy to look under that
# directory path. If your repo has a different layout you can add the appropriate paths
# by setting MYPYPATH env variable.
mypy_path = "src:src/python"
exclude = [
    # Exclude anything in an examples directory, except the docs/examples dir.
    '^(?!docs\/examples\/).*examples\/.*$',
    # Exclude our test files where we invoce mypy from pytest.
    "tests/sdk/typing"
]
# Without this, mypy would skip typechecking functions that don't have type
# annotations in the signature.
check_untyped_defs = true

[tool.coverage.run]
omit = [
  # main.py should be checked separately in an integration test.
  "*/main.py",
  "*/__init__.py",
  # This is vendored source code from another project
  "src/orquestra/sdk/kubernetes/quantity.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "assert_never",
]

[tool.pytest.ini_options]
log_level="INFO"


[tool.ruff]
select = [
  "E",   # pycodestyle
  "W",   # pycodestyle
  "F",   # pyflakes
]
ignore = ["E203","E266"]
target-version = "py38"


[tool.pymarkdown]
# Our CHANGELOG.md violates all these rules. We can remove them one-by-one when
# we fix the formatting. Rules reference:
# https://github.com/jackdewinter/pymarkdown/blob/main/docs/rules.md
plugins.md007.enabled = false
plugins.md012.enabled = false
plugins.md013.enabled = false
plugins.md019.enabled = false
plugins.md022.enabled = false
plugins.md031.enabled = false
plugins.md032.enabled = false
plugins.md034.enabled = false
plugins.md036.enabled = false
