[build-system]
requires = [
    # The pin is a workaround for editable installs breaking IDEs.
    # See this mypy issue: https://github.com/python/mypy/issues/13392#issuecomment-1213527559
    # and our note: https://zapatacomputing.atlassian.net/wiki/spaces/ORQSRUN/pages/519012482/Editable+installs
    "setuptools<=63",
    "wheel",
    "setuptools_scm>=6.0",
]

# Including this section is same as 'use_scm_version=True' in setup.py
# See https://github.com/pypa/setuptools_scm for guidance
[tool.setuptools_scm]

[tool.isort]
profile = "black"

[tool.mypy]
# Without this we would have to add an empty __init__.py file for every package.
namespace_packages = true
# Without this mypy complains about the same module being imported under different
# names. Note that this also requires setting `mypy_path`.
explicit_package_bases = true
# We usually keep our source code under `src/<namespace>/<library>/...` or
# `src/python/<namespace>/<library>...`. This option tells mypy to look under that
# directory path. If your repo has a different layout you can add the appropriate paths
# by setting MYPYPATH env variable.
mypy_path = "src:src/python"
exclude = [
    # Exclude anything in an examples directory, except the docs/examples dir.
    '^(?!docs\/examples\/).*examples\/.*$',
    # Exclude our test files where we invoce mypy from pytest.
    "tests/sdk/typing"
]
# Without this, mypy would skip typechecking functions that don't have type
# annotations in the signature.
check_untyped_defs = true

[tool.coverage.run]
omit = [
  # main.py should be checked separately in an integration test.
  "*/main.py",
  "*/__init__.py",
  # This is vendored source code from another project
  "src/orquestra/sdk/kubernetes/quantity.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "assert_never",
]

[tool.pytest.ini_options]
log_level="INFO"


[tool.ruff]
select = [
  "E",   # pycodestyle
  "W",   # pycodestyle
  "F",   # pyflakes
  "D",   # pydocstyle
]
ignore = ["E203","E266","D100","D101","D102","D103","D104","D105","D106","D107",]
target-version = "py38"

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.pydocstyle]
convention="google"

[tool.pymarkdown]
# Our CHANGELOG.md violates all these rules. We can remove them one-by-one when
# we fix the formatting. Rules reference:
# https://github.com/jackdewinter/pymarkdown/blob/main/docs/rules.md
plugins.md013.enabled = false

[tool.flake8]
style = 'google'
ignore = [
    'E203',     # whitespace before ':'
    'E266',     # Too many leading '#' for block comment
    'DOC201',   # Function/method does not have a return section in docstring
    'DOC203',   # Return type(s) in docstring not consistent with the return annotation
    'DOC301',   # `__init__()` should not have a docstring
    'W503'      # Line break occurred before a binary operator
]
per-file-ignores = [
    'abc.py:DOC501', # ABC docstrings don't need "raises NotImplementedError"
]
max-line-length = 88
count = true
arg-type-hints-in-docstring = false

[tool.pyright]
# pyright 1.1.340 and newer hangs up when analyzing this file.
exclude = [
    "./src/orquestra/sdk/_base/_traversal.py"
]

