[metadata]
name = orquestra-sdk
description = "Compose Orquestra workflows using a Python DSL"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zapatacomputing/orquestra-workflow-sdk
author = Zapata Computing Inc.
author_email = info@zapatacomputing.com
license = Apache License 2.0
license_files =
   LICENSE
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8

install_requires =
    # Schema definition 
    pydantic<2
    # Pickling library
    dill @ git+https://github.com/jamesclark-zapata/dill.git@debug-0.3.6
    # Enhances wrapping of user's functions
    wrapt
    # Configuration file locking
    filelock>=3.3.2
    # Parse config file version
    packaging>=21
    # For different import types in SDK
    GitPython
    pip-api==0.0.30
    # Python Standard Library Backports
    importlib_metadata~=4.0
    typing-extensions~=4.0
    # QE Workflow export 
    pyyaml
    # Web requests for external services
    requests~=2.28
    # Nice workflow visualizations
    graphviz
    # CLI utilities
    argcomplete
    click~=8.0
    cloup~=2.0
    inquirer~=3.0
    tabulate
    pygments~=2.0
    # For automatic login
    aiohttp~=3.8


[options.entry_points]
console_scripts =
    orq = orquestra.sdk._base.cli._dorq._entry:dorq


[options.packages.find]
where = src


[options.extras_require]
ray =
    ray[default]==2.3.0
    # Ray workflows also requires pyarrow but it's missing from their requirements.
    pyarrow
all =
    orquestra-sdk[ray]
dev =
    orquestra-sdk[all]
    mypy>=0.981
    # provides standardized dev requirements
    orquestra-python-dev
    pytest-dependency
    pytest_httpserver
    numpy
    responses~=0.20
    scikit-learn
    types-PyYAML
    types-requests
    types-tabulate
    types-Pygments
    types-psutil
    diff_cover
