[metadata]
name = orquestra-sdk
description = "Compose Orquestra workflows using a Python DSL"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zapatacomputing/orquestra-workflow-sdk
author = Zapata Computing Inc.
author_email = info@zapatacomputing.com
license = Apache License 2.0
license_files =
   LICENSE
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8

install_requires =
    # Schema definition
    pydantic>=1.10.8,<2
    # Pickling library
    cloudpickle==2.2.1
    # We should keep `dill` to make sure old workflows can be unpickled.
    dill==0.3.6
    # Enhances wrapping of user's functions
    wrapt
    # Configuration file locking
    filelock>=3.3.2
    # Parse version strings
    packaging>=21
    # For different import types in SDK
    GitPython
    pip-api==0.0.30
    # Python Standard Library Backports
    importlib_metadata~=4.0
    typing-extensions>=4.1.0
    # Web requests for external services
    requests~=2.28
    # Nice workflow visualizations
    graphviz
    # CLI utilities
    argcomplete
    # click 8.1.4 introduced type checking errors
    # see https://github.com/pallets/click/issues/2558
    click~=8.0, != 8.1.4
    cloup~=2.0
    inquirer~=3.0
    tabulate
    rich~=13.5
    # For automatic login
    aiohttp~=3.8
    # Decoding JWTs
    PyJWT~=2.6
    # Capture stdout/stderr
    wurlitzer~=3.0


[options.entry_points]
console_scripts =
    orq = orquestra.sdk._base.cli._entry:dorq


[options.packages.find]
where = src


[options.extras_require]
ray =
    ray[default]==2.9.3
    async-timeout # Ray depends on this, but its missing from ray requirements. Can be removed when https://github.com/ray-project/ray/issues/41267 is fixed.
    pyarrow # Ray workflows depend on this, but it's missing from ray requirements.
all =
    orquestra-sdk[ray]

# Docs-specific deps. This list should match the requirements we're using in
# the multi-repo docs builds.
docs =
    sphinx<7.0,>6.0
    furo==2023.7.26
    sphinx_design==0.4.1
    sphinx-autobuild==2021.3.14
    sphinx-autoapi==2.1.1
    sphinxcontrib-youtube==1.2.0
    sphinxcontrib-autoprogram==0.1.8
    sphinx-copybutton==0.5.2
    sphinx-click==4.4.0
    sphinx-togglebutton==0.3.2
    sphinxemoji==0.2.0
    Jinja2>=3.0.0

dev =
    orquestra-sdk[all,docs]
    black~=23.7
    diff_cover
    flake8>=4.0.0
    Flake8-pyproject>=1.2.3
    freezegun
    isort~=5.9.0
    mlflow-skinny # Required for testing snippets in docs.
    mypy~=0.910  # bumping caused issues - ORQSDK-966
    numpy
    pydoclint # Linter for python docstrings. Provides a flake8 plugin.
    pymarkdownlnt # Linter for markdown files.
    pyright
    pytest~=6.2
    pytest-cov>=2.12
    pytest-dependency
    pytest_httpserver
    responses~=0.20,!=0.24
    ruff
    scikit-learn
    types-psutil
    types-Pygments
    types-requests
    types-setuptools
    types-tabulate
